--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    testing
+    <nav></nav>
+    <header></header>
+    <main></main>
   </body>
 </html>
