--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <nav></nav>
-    <header></header>
-    <main></main>
+    <header>
+      <h1>Real Estate</h1>
+      <nav>
+        <ul>
+          <li><a href="about.html"></a>About</li>
+          <li><a href="blog.html"></a>Blog</li>
+          <li><a href="contact.html"></a>Contact</li>
+        </ul>
+        <p>We sell luxury houses, condominiums, and penthouses.</p>
+      </nav>
+    </header>
+
+    <main>
+      <h2>More about us</h2>
+    </main>
+
+    <footer></footer>
   </body>
 </html>
