header main page

--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <h1>Real Estate</h1>
-      <nav>
-        <ul>
+    <header class="site-header flex row align">
+      <div class="flex row align">
+        <i class="fa-solid fa-house-chimney-user"></i>
+        <div class="flex col">
+          <h1>RP Real Estate</h1>
+          <p>We sell luxury houses, condominiums, and penthouses.</p>
+        </div>
+      </div>
+      <nav class="nav-desktop">
+        <ul class="flex row">
           <li><a href="about.html"></a>About</li>
           <li><a href="blog.html"></a>Blog</li>
           <li><a href="contact.html"></a>Contact</li>
         </ul>
-        <p>We sell luxury houses, condominiums, and penthouses.</p>
       </nav>
     </header>
 
@@ -25,5 +29,9 @@
     </main>
 
     <footer></footer>
+    <script
+      src="https://kit.fontawesome.com/c7dcac8717.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
