--- a/index.html
+++ b/index.html
@@ -6,27 +6,16 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <header class="site-header flex row align">
+  <body id="#bhome">
+    <nav class="navigation flex align">
       <div class="flex row align">
-        <i class="fa-solid fa-house-chimney-user"></i>
-        <div class="flex col">
-          <h1>RP Real Estate</h1>
-          <p>We sell luxury houses, condominiums, and penthouses.</p>
-        </div>
+        <img src="img/logo.png" alt="" />
+        <h2></h2>
       </div>
-      <nav class="nav-desktop">
-        <ul class="flex row">
-          <li><a href="about.html"></a>About</li>
-          <li><a href="blog.html"></a>Blog</li>
-          <li><a href="contact.html"></a>Contact</li>
-        </ul>
-      </nav>
-    </header>
+    </nav>
+    <header class="site-header flex row align"></header>
 
-    <main>
-      <h2>More about us</h2>
-    </main>
+    <main></main>
 
     <footer></footer>
     <script
