--- a/index.html
+++ b/index.html
@@ -6,14 +6,51 @@
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body id="#bhome">
-    <nav class="navigation flex align">
-      <div class="flex row align">
-        <img src="img/logo.png" alt="" />
-        <h2></h2>
+  <body id="bhome">
+    <nav class="flex align glassbg">
+      <div class="container flex align">
+        <div class="flex row align">
+          <img src="img/logo.png" alt="" />
+          <h2>restate</h2>
+        </div>
+        <ul class="desktop flex row align">
+          <li><a href="about.html">About</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <i class="fa-solid fa-bars"></i>
       </div>
     </nav>
-    <header class="site-header flex row align"></header>
+
+    <header class="flex align col justify">
+      <h2>
+        We sell <br /><span>luxury houses,</span> <span>condominiums,</span>
+        <br />and
+        <span>penthouses</span>
+      </h2>
+      <div class="flex row align justify">
+        <hr />
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <i class="fa-solid fa-star"></i>
+        <hr />
+      </div>
+    </header>
+
+    <section class="strip">
+      <div class="container flex align">
+        <figure>
+          <i class="fa-solid fa-shield-halved"></i>
+          <figcaption>
+            <h3>Security:</h3>
+            <p>
+              Invest confidently with Restate real estate - your assets
+              protected, ensuring peace of mind and financial stability.
+            </p>
+          </figcaption>
+        </figure>
+      </div>
+    </section>
 
     <main></main>
 
