--- a/index.html
+++ b/index.html
@@ -38,14 +38,37 @@
     </header>
 
     <section class="strip">
+      <h2>What sets us apart?</h2>
       <div class="container flex align">
-        <figure>
+        <figure class="flex row align justify">
           <i class="fa-solid fa-shield-halved"></i>
           <figcaption>
             <h3>Security:</h3>
             <p>
               Invest confidently with Restate real estate - your assets
               protected, ensuring peace of mind and financial stability.
+            </p>
+          </figcaption>
+        </figure>
+
+        <figure class="flex row align justify">
+          <i class="fa-solid fa-hand-holding-dollar"></i>
+          <figcaption>
+            <h3>Best Prices:</h3>
+            <p>
+              Experience unbeatable value with Restate real estate, offering the
+              most competitive prices in the market.
+            </p>
+          </figcaption>
+        </figure>
+
+        <figure class="flex row align justify">
+          <i class="fa-solid fa-business-time"></i>
+          <figcaption>
+            <h3>On-time:</h3>
+            <p>
+              Trust Restate real estate for timely transactions, ensuring
+              promptness and efficiency in every step of your property dealings.
             </p>
           </figcaption>
         </figure>
