--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Restate | Home</title>
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
   </head>
   <body id="bhome">
     <nav class="flex align glassbg">
@@ -77,7 +78,11 @@
 
     <main></main>
 
-    <footer></footer>
+    <footer>
+      <div class="backtotopbutton">
+        <a href="#"><i class="fa-solid fa-circle-chevron-up"></i></a>
+      </div>
+    </footer>
     <script
       src="https://kit.fontawesome.com/c7dcac8717.js"
       crossorigin="anonymous"
