--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Restate | Home</title>
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
   </head>
-  <body id="bhome">
+  <body id="bindex">
     <nav class="flex align glassbg">
       <div class="container flex align">
         <div class="flex row align">
@@ -76,7 +76,20 @@
       </div>
     </section>
 
-    <main></main>
+    <main>
+      <section class="featured container">
+        <h2>Featured Listing</h2>
+        <figure class="flex justify">
+          <img src="img/announcement3.jpg" alt="" />
+          <figcaption>
+            <div class="flex row align">
+              <h3>$3,800,000</h3>
+              <h3>6/22</h3>
+            </div>
+          </figcaption>
+        </figure>
+      </section>
+    </main>
 
     <footer>
       <div class="backtotopbutton">
@@ -87,5 +100,6 @@
       src="https://kit.fontawesome.com/c7dcac8717.js"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
   </body>
 </html>
