--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
               <h3>$3,800,000</h3>
               <h3>6/22</h3>
             </div>
+            <div class="details flex row align"></div>
           </figcaption>
         </figure>
       </section>
