home mobile repsonsive

--- a/index.html
+++ b/index.html
@@ -79,16 +79,13 @@
     <main>
       <section class="featured container">
         <h2>Featured Listing</h2>
-        <figure class="flex justify">
+        <div class="details flex">
           <img src="img/announcement3.jpg" alt="" />
-          <figcaption>
-            <div class="flex row align">
-              <h3>$3,800,000</h3>
-              <h3>6/22</h3>
-            </div>
-            <div class="details flex row align"></div>
-          </figcaption>
-        </figure>
+          <ul>
+            <h3>Palazzo</h3>
+            <li>$3,500,000</li>
+          </ul>
+        </div>
       </section>
     </main>
 
