home page mobile responsive

--- a/index.html
+++ b/index.html
@@ -79,12 +79,14 @@
     <main>
       <section class="featured container">
         <h2>Featured Listing</h2>
-        <div class="details flex">
-          <img src="img/announcement3.jpg" alt="" />
-          <ul>
-            <h3>Palazzo</h3>
-            <li>$3,500,000</li>
-          </ul>
+        <div class="listing-item flex">
+          <div class="details flex">
+            <img src="img/announcement3.jpg" alt="" />
+            <ul>
+              <h3>Palazzo</h3>
+              <li>$3,500,000</li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
