--- a/index.html
+++ b/index.html
@@ -79,13 +79,28 @@
     <main>
       <section class="featured container">
         <h2>Featured Listing</h2>
+
         <div class="listing-item flex">
-          <div class="details flex">
+          <div class="listing-title flex">
             <img src="img/announcement3.jpg" alt="" />
             <ul>
               <h3>Palazzo</h3>
-              <li>$3,500,000</li>
+              <li><i class="fa-solid fa-location-dot"></i> Los Angeles, CA</li>
             </ul>
+          </div>
+
+          <div class="listing-detail flex col">
+            <h3>$16,500,000</h3>
+            <div class="flex row">
+              <ul>
+                <li><i class="fa-solid fa-bed"></i> 8 Beds</li>
+                <li><i class="fa-solid fa-bath"></i> 6 Baths</li>
+              </ul>
+              <ul>
+                <li><i class="fa-solid fa-bed"></i> 8 Beds</li>
+                <li><i class="fa-solid fa-bath"></i> 6 Baths</li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
