--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
     <link rel="stylesheet" href="style.css" />
     <title>Restate | Home</title>
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
+    <script
+      src="https://kit.fontawesome.com/c7dcac8717.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body id="bindex">
     <nav class="flex align glassbg">
       <div class="container flex align">
-        <div class="flex row align">
-          <img src="img/logo.png" alt="" />
-          <h2>restate</h2>
+        <div>
+          <a href="index.html" class="flex row align"
+            ><img src="img/logo.png" alt="" />
+            <h2>restate</h2></a
+          >
         </div>
         <ul class="desktop flex row align">
           <li><a href="about.html">About</a></li>
@@ -90,17 +96,24 @@
           </div>
 
           <div class="listing-detail flex col">
-            <h3>$16,500,000</h3>
+            <h3>$6,500,000</h3>
             <div class="flex row">
               <ul>
-                <li><i class="fa-solid fa-bed"></i> 8 Beds</li>
-                <li><i class="fa-solid fa-bath"></i> 6 Baths</li>
+                <li><i class="fa-solid fa-ruler-combined"></i> 4,233 sqft</li>
+                <li><i class="fa-solid fa-building-user"></i> Built in 2002</li>
               </ul>
               <ul>
                 <li><i class="fa-solid fa-bed"></i> 8 Beds</li>
                 <li><i class="fa-solid fa-bath"></i> 6 Baths</li>
               </ul>
             </div>
+            <p>
+              Indulge in the ultimate coastal retreat with this exquisite modern
+              mansion, offering panoramic ocean views and opulent amenities.
+              <br /><br />
+              Experience timeless elegance and unparalleled luxury living in
+              this prestigious property, a true masterpiece of coastal opulence.
+            </p>
           </div>
         </div>
       </section>
@@ -111,10 +124,7 @@
         <a href="#"><i class="fa-solid fa-circle-chevron-up"></i></a>
       </div>
     </footer>
-    <script
-      src="https://kit.fontawesome.com/c7dcac8717.js"
-      crossorigin="anonymous"
-    ></script>
+
     <script src="index.js"></script>
   </body>
 </html>
