--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
               Experience timeless elegance and unparalleled luxury living in
               this prestigious property, a true masterpiece of coastal opulence.
             </p>
+            <button class="button">View Details</button>
           </div>
         </div>
       </section>
