mobile design ok

--- a/index.html
+++ b/index.html
@@ -117,6 +117,74 @@
             <button class="button">View Details</button>
           </div>
         </div>
+
+        <div class="listing-card flex">
+          <figure class="flex">
+            <img src="img/announcement1.jpg" alt="" />
+            <figcaption class="flex col">
+              <h3>$3,200,000</h3>
+              <h3>Teresina</h3>
+              <li class="sublist-item">
+                <i class="fa-solid fa-location-dot"></i> Solana Beach, CA
+              </li>
+              <div class="flex row">
+                <ul>
+                  <li><i class="fa-solid fa-ruler-combined"></i> 3,110 sqft</li>
+                  <li><i class="fa-solid fa-building-user"></i> 2006</li>
+                </ul>
+                <ul>
+                  <li><i class="fa-solid fa-bed"></i> 6 Beds</li>
+                  <li><i class="fa-solid fa-bath"></i> 4 Baths</li>
+                </ul>
+              </div>
+              <button class="button">View Details</button>
+            </figcaption>
+          </figure>
+
+          <figure class="flex">
+            <img src="img/announcement2.jpg" alt="" />
+            <figcaption class="flex col">
+              <h3>$3,200,000</h3>
+              <h3>Teresina</h3>
+              <li class="sublist-item">
+                <i class="fa-solid fa-location-dot"></i> Solana Beach, CA
+              </li>
+              <div class="flex row">
+                <ul>
+                  <li><i class="fa-solid fa-ruler-combined"></i> 3,110 sqft</li>
+                  <li><i class="fa-solid fa-building-user"></i> 2006</li>
+                </ul>
+                <ul>
+                  <li><i class="fa-solid fa-bed"></i> 6 Beds</li>
+                  <li><i class="fa-solid fa-bath"></i> 4 Baths</li>
+                </ul>
+              </div>
+              <button class="button">View Details</button>
+            </figcaption>
+          </figure>
+
+          <figure class="flex">
+            <img src="img/announcement4.jpg" alt="" />
+            <figcaption class="flex col">
+              <h3>$3,200,000</h3>
+              <h3>Teresina</h3>
+              <li class="sublist-item">
+                <i class="fa-solid fa-location-dot"></i> Solana Beach, CA
+              </li>
+              <div class="flex row">
+                <ul>
+                  <li><i class="fa-solid fa-ruler-combined"></i> 3,110 sqft</li>
+                  <li><i class="fa-solid fa-building-user"></i> 2006</li>
+                </ul>
+                <ul>
+                  <li><i class="fa-solid fa-bed"></i> 6 Beds</li>
+                  <li><i class="fa-solid fa-bath"></i> 4 Baths</li>
+                </ul>
+              </div>
+              <button class="button">View Details</button>
+            </figcaption>
+          </figure>
+        </div>
       </section>
     </main>
 
