listing section ok

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <section class="featured container">
         <h2>Featured Listing</h2>
 
-        <div class="listing-item flex">
+        <div class="listing-item lightbg flex">
           <div class="listing-title flex">
             <img src="img/announcement3.jpg" alt="" />
             <ul>
@@ -119,11 +119,11 @@
         </div>
 
         <div class="listing-card flex">
-          <figure class="flex">
+          <figure class="flex lightbg">
             <img src="img/announcement1.jpg" alt="" />
             <figcaption class="flex col">
               <h3>$3,200,000</h3>
-              <h3>Teresina</h3>
+              <h3>Ladera</h3>
               <li class="sublist-item">
                 <i class="fa-solid fa-location-dot"></i> Solana Beach, CA
               </li>
@@ -141,21 +141,21 @@
             </figcaption>
           </figure>
 
-          <figure class="flex">
+          <figure class="flex lightbg">
             <img src="img/announcement2.jpg" alt="" />
             <figcaption class="flex col">
-              <h3>$3,200,000</h3>
-              <h3>Teresina</h3>
+              <h3>$2,000,000</h3>
+              <h3>Montecito</h3>
               <li class="sublist-item">
-                <i class="fa-solid fa-location-dot"></i> Solana Beach, CA
+                <i class="fa-solid fa-location-dot"></i> Lakeside, CA
               </li>
               <div class="flex row">
                 <ul>
-                  <li><i class="fa-solid fa-ruler-combined"></i> 3,110 sqft</li>
-                  <li><i class="fa-solid fa-building-user"></i> 2006</li>
+                  <li><i class="fa-solid fa-ruler-combined"></i> 3,550 sqft</li>
+                  <li><i class="fa-solid fa-building-user"></i> 2011</li>
                 </ul>
                 <ul>
-                  <li><i class="fa-solid fa-bed"></i> 6 Beds</li>
+                  <li><i class="fa-solid fa-bed"></i> 4 Beds</li>
                   <li><i class="fa-solid fa-bath"></i> 4 Baths</li>
                 </ul>
               </div>
@@ -163,22 +163,22 @@
             </figcaption>
           </figure>
 
-          <figure class="flex">
+          <figure class="flex lightbg">
             <img src="img/announcement4.jpg" alt="" />
             <figcaption class="flex col">
-              <h3>$3,200,000</h3>
-              <h3>Teresina</h3>
+              <h3>$2,800,000</h3>
+              <h3>Ventana</h3>
               <li class="sublist-item">
-                <i class="fa-solid fa-location-dot"></i> Solana Beach, CA
+                <i class="fa-solid fa-location-dot"></i> Santee, CA
               </li>
               <div class="flex row">
                 <ul>
-                  <li><i class="fa-solid fa-ruler-combined"></i> 3,110 sqft</li>
-                  <li><i class="fa-solid fa-building-user"></i> 2006</li>
+                  <li><i class="fa-solid fa-ruler-combined"></i> 2,800 sqft</li>
+                  <li><i class="fa-solid fa-building-user"></i> 2017</li>
                 </ul>
                 <ul>
-                  <li><i class="fa-solid fa-bed"></i> 6 Beds</li>
-                  <li><i class="fa-solid fa-bath"></i> 4 Baths</li>
+                  <li><i class="fa-solid fa-bed"></i> 5 Beds</li>
+                  <li><i class="fa-solid fa-bath"></i> 3 Baths</li>
                 </ul>
               </div>
               <button class="button">View Details</button>
