listing section ok

--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
             <h3>$6,500,000</h3>
             <div class="flex row">
               <ul>
-                <li><i class="fa-solid fa-ruler-combined"></i> 4,233 sqft</li>
-                <li><i class="fa-solid fa-building-user"></i> Built in 2002</li>
+                <li><i class="fa-solid fa-ruler-combined"></i> 4,233</li>
+                <li><i class="fa-solid fa-building-user"></i> 2002</li>
               </ul>
               <ul>
-                <li><i class="fa-solid fa-bed"></i> 8 Beds</li>
-                <li><i class="fa-solid fa-bath"></i> 6 Baths</li>
+                <li><i class="fa-solid fa-bed"></i> 8</li>
+                <li><i class="fa-solid fa-bath"></i> 6</li>
               </ul>
             </div>
             <p>
@@ -114,7 +114,7 @@
               Experience timeless elegance and unparalleled luxury living in
               this prestigious property, a true masterpiece of coastal opulence.
             </p>
-            <button class="button">View Details</button>
+            <button class="button">Details</button>
           </div>
         </div>
 
@@ -133,11 +133,11 @@
                   <li><i class="fa-solid fa-building-user"></i> 2006</li>
                 </ul>
                 <ul>
-                  <li><i class="fa-solid fa-bed"></i> 6 Beds</li>
-                  <li><i class="fa-solid fa-bath"></i> 4 Baths</li>
+                  <li><i class="fa-solid fa-bed"></i> 6</li>
+                  <li><i class="fa-solid fa-bath"></i> 4</li>
                 </ul>
               </div>
-              <button class="button">View Details</button>
+              <button class="button">Details</button>
             </figcaption>
           </figure>
 
@@ -151,15 +151,15 @@
               </li>
               <div class="flex row">
                 <ul>
-                  <li><i class="fa-solid fa-ruler-combined"></i> 3,550 sqft</li>
+                  <li><i class="fa-solid fa-ruler-combined"></i>3,550 sqft</li>
                   <li><i class="fa-solid fa-building-user"></i> 2011</li>
                 </ul>
                 <ul>
-                  <li><i class="fa-solid fa-bed"></i> 4 Beds</li>
-                  <li><i class="fa-solid fa-bath"></i> 4 Baths</li>
+                  <li><i class="fa-solid fa-bed"></i> 4</li>
+                  <li><i class="fa-solid fa-bath"></i> 4</li>
                 </ul>
               </div>
-              <button class="button">View Details</button>
+              <button class="button">Details</button>
             </figcaption>
           </figure>
 
@@ -173,15 +173,15 @@
               </li>
               <div class="flex row">
                 <ul>
-                  <li><i class="fa-solid fa-ruler-combined"></i> 2,800 sqft</li>
+                  <li><i class="fa-solid fa-ruler-combined"></i>2,800 sqft</li>
                   <li><i class="fa-solid fa-building-user"></i> 2017</li>
                 </ul>
                 <ul>
-                  <li><i class="fa-solid fa-bed"></i> 5 Beds</li>
-                  <li><i class="fa-solid fa-bath"></i> 3 Baths</li>
+                  <li><i class="fa-solid fa-bed"></i>5</li>
+                  <li><i class="fa-solid fa-bath"></i>3</li>
                 </ul>
               </div>
-              <button class="button">View Details</button>
+              <button class="button">Details</button>
             </figcaption>
           </figure>
         </div>
