last commit for today lol

--- a/index.html
+++ b/index.html
@@ -99,12 +99,14 @@
             <h3>$6,500,000</h3>
             <div class="flex row">
               <ul>
-                <li><i class="fa-solid fa-ruler-combined"></i> 4,233</li>
-                <li><i class="fa-solid fa-building-user"></i> 2002</li>
+                <li>
+                  <i class="fa-solid fa-ruler-combined"></i>4,233 ft<sup>2</sup>
+                </li>
+                <li><i class="fa-solid fa-building-user"></i>Built 2002</li>
               </ul>
               <ul>
-                <li><i class="fa-solid fa-bed"></i> 8</li>
-                <li><i class="fa-solid fa-bath"></i> 6</li>
+                <li><i class="fa-solid fa-bed"></i>8 Beds</li>
+                <li><i class="fa-solid fa-bath"></i>6 Baths</li>
               </ul>
             </div>
             <p>
@@ -129,12 +131,15 @@
               </li>
               <div class="flex row">
                 <ul>
-                  <li><i class="fa-solid fa-ruler-combined"></i> 3,110 sqft</li>
-                  <li><i class="fa-solid fa-building-user"></i> 2006</li>
+                  <li>
+                    <i class="fa-solid fa-ruler-combined"></i>3,110 ft
+                    <sup>2</sup>
+                  </li>
+                  <li><i class="fa-solid fa-building-user"></i>2006</li>
                 </ul>
                 <ul>
-                  <li><i class="fa-solid fa-bed"></i> 6</li>
-                  <li><i class="fa-solid fa-bath"></i> 4</li>
+                  <li><i class="fa-solid fa-bed"></i>6</li>
+                  <li><i class="fa-solid fa-bath"></i>4</li>
                 </ul>
               </div>
               <button class="button">Details</button>
@@ -151,12 +156,15 @@
               </li>
               <div class="flex row">
                 <ul>
-                  <li><i class="fa-solid fa-ruler-combined"></i>3,550 sqft</li>
-                  <li><i class="fa-solid fa-building-user"></i> 2011</li>
+                  <li>
+                    <i class="fa-solid fa-ruler-combined"></i>3,550 ft
+                    <sup>2</sup>
+                  </li>
+                  <li><i class="fa-solid fa-building-user"></i>2011</li>
                 </ul>
                 <ul>
-                  <li><i class="fa-solid fa-bed"></i> 4</li>
-                  <li><i class="fa-solid fa-bath"></i> 4</li>
+                  <li><i class="fa-solid fa-bed"></i>4</li>
+                  <li><i class="fa-solid fa-bath"></i>4</li>
                 </ul>
               </div>
               <button class="button">Details</button>
@@ -173,8 +181,11 @@
               </li>
               <div class="flex row">
                 <ul>
-                  <li><i class="fa-solid fa-ruler-combined"></i>2,800 sqft</li>
-                  <li><i class="fa-solid fa-building-user"></i> 2017</li>
+                  <li>
+                    <i class="fa-solid fa-ruler-combined"></i>2,800 ft
+                    <sup>2</sup>
+                  </li>
+                  <li><i class="fa-solid fa-building-user"></i>2017</li>
                 </ul>
                 <ul>
                   <li><i class="fa-solid fa-bed"></i>5</li>
