ok for submission assignment 2

--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
               <div class="flex row">
                 <ul>
                   <li>
-                    <i class="fa-solid fa-ruler-combined"></i>3,110 ft
-                    <sup>2</sup>
+                    <i class="fa-solid fa-ruler-combined"></i>3,110 ft<sup
+                      >2</sup
+                    >
                   </li>
                   <li><i class="fa-solid fa-building-user"></i>2006</li>
                 </ul>
@@ -157,8 +158,9 @@
               <div class="flex row">
                 <ul>
                   <li>
-                    <i class="fa-solid fa-ruler-combined"></i>3,550 ft
-                    <sup>2</sup>
+                    <i class="fa-solid fa-ruler-combined"></i>3,550 ft<sup
+                      >2</sup
+                    >
                   </li>
                   <li><i class="fa-solid fa-building-user"></i>2011</li>
                 </ul>
@@ -182,8 +184,9 @@
               <div class="flex row">
                 <ul>
                   <li>
-                    <i class="fa-solid fa-ruler-combined"></i>2,800 ft
-                    <sup>2</sup>
+                    <i class="fa-solid fa-ruler-combined"></i>2,800 ft<sup
+                      >2</sup
+                    >
                   </li>
                   <li><i class="fa-solid fa-building-user"></i>2017</li>
                 </ul>
