fix mobile display

--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
       <fieldset class="flex col container radio">
         <legend>Contact Info</legend>
         <label for="">Preferred Contact Method</label>
-        <div class="input-control flex row">
+        <div class="input-control flex row align">
           <div class="flex row">
             <input type="radio" id="phone" name="contact" value="phone" />
             <label for="phone">Phone</label>
