--- a/contact.html
+++ b/contact.html
@@ -115,10 +115,12 @@
           </div>
         </div>
 
-        <label for="">Preferred Schedule </label>
+        <label for="">Preferred Date: </label>
         <div class="input-control flex row">
           <input type="date" />
         </div>
+
+        <label for="">Preferred Time: </label>
         <div class="input-control flex row">
           <input type="time" />
         </div>
