--- a/index.html
+++ b/index.html
@@ -44,44 +44,6 @@
       </div>
     </header>
 
-    <section class="strip">
-      <h2>What sets us apart?</h2>
-      <div class="container flex align">
-        <figure class="flex row align justify">
-          <i class="fa-solid fa-shield-halved"></i>
-          <figcaption>
-            <h3>Security:</h3>
-            <p>
-              Invest confidently with Restate real estate - your assets
-              protected, ensuring peace of mind and financial stability.
-            </p>
-          </figcaption>
-        </figure>
-
-        <figure class="flex row align justify">
-          <i class="fa-solid fa-hand-holding-dollar"></i>
-          <figcaption>
-            <h3>Best Prices:</h3>
-            <p>
-              Experience unbeatable value with Restate real estate, offering the
-              most competitive prices in the market.
-            </p>
-          </figcaption>
-        </figure>
-
-        <figure class="flex row align justify">
-          <i class="fa-solid fa-business-time"></i>
-          <figcaption>
-            <h3>On-time:</h3>
-            <p>
-              Trust Restate real estate for timely transactions, ensuring
-              promptness and efficiency in every step of your property dealings.
-            </p>
-          </figcaption>
-        </figure>
-      </div>
-    </section>
-
     <main>
       <section class="featured container">
         <h2>Featured Listing</h2>
@@ -202,9 +164,133 @@
       </section>
     </main>
 
-    <footer>
+    <section class="strip flex col">
+      <h2>What sets us apart?</h2>
+      <div class="container flex align">
+        <figure class="flex row align justify">
+          <i class="fa-solid fa-shield-halved"></i>
+          <figcaption>
+            <h3>Security:</h3>
+            <p>
+              Invest confidently with Restate real estate - your assets
+              protected, ensuring peace of mind and financial stability.
+            </p>
+          </figcaption>
+        </figure>
+
+        <figure class="flex row align justify">
+          <i class="fa-solid fa-hand-holding-dollar"></i>
+          <figcaption>
+            <h3>Best Prices:</h3>
+            <p>
+              Experience unbeatable value with Restate real estate, offering the
+              most competitive prices in the market.
+            </p>
+          </figcaption>
+        </figure>
+
+        <figure class="flex row align justify">
+          <i class="fa-solid fa-business-time"></i>
+          <figcaption>
+            <h3>On-time:</h3>
+            <p>
+              Trust Restate real estate for timely transactions, ensuring
+              promptness and efficiency in every step of your property dealings.
+            </p>
+          </figcaption>
+        </figure>
+      </div>
+      <a href="about.html"><button class="button">about us</button></a>
+    </section>
+
+    <section class="blogpreview">
+      <figure class="flex container align">
+        <img src="img/blog2.jpg" alt="" />
+        <figcaption class="flex col">
+          <h2>
+            Luxury Real Estate Investment: Exclusive Opportunities for Maximum
+            Returns
+          </h2>
+          <h3>By James Maxwell</h3>
+          <p>
+            Unlock exclusive opportunities and amplify your wealth with luxury
+            real estate investments that offer exceptional returns and long-term
+            prosperity.
+            <br /><br />
+            Discover the world of luxury real estate investing, where
+            prestigious properties become your gateway to financial success and
+            unmatched lifestyle experiences.
+          </p>
+          <a href="blog.html"><button class="button">read more</button></a>
+        </figcaption>
+      </figure>
+    </section>
+
+    <footer class="flex">
       <div class="backtotopbutton">
         <a href="#"><i class="fa-solid fa-circle-chevron-up"></i></a>
+      </div>
+
+      <div class="brand-logo flex">
+        <a href="index.html" class="flex"
+          ><img src="img/logo.png" alt="" />
+          <h2>restate</h2></a
+        >
+      </div>
+
+      <div class="nav-links">
+        <ul class="flex">
+          <li><a href="index.html">Home</a></li>
+          <li>|</li>
+          <li><a href="blog.html">Blog</a></li>
+          <li>|</li>
+          <li>About</li>
+          <li>|</li>
+          <li>Contact</li>
+        </ul>
+
+        <ul class="business-info flex col">
+          <li>Email: info@luxestates.com</li>
+          <li>Phone: +1-555-123-4567</li>
+          <li>123 Luxurious Ave, Opulent City, CA, 92574</li>
+        </ul>
+      </div>
+
+      <div class="subscribe flex col">
+        <label for="">Subscribe to our newsletter</label>
+        <div class="flex row">
+          <input type="text" placeholder="Enter your E-Mail" />
+          <button class="button">Submit</button>
+        </div>
+
+        <div class="social-media">
+          <h3>
+            © 2023 Luxe Estates. All rights reserved. Luxe Estates is a
+            registered trademark of Prestige Holdings LLC.
+          </h3>
+          <ul class="flex row">
+            <li>
+              <a href="https://facebook.com" target="_blank"
+                ><i class="fa-brands fa-square-facebook"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://instagram.com" target="_blank"
+                ><i class="fa-brands fa-square-instagram"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://twitter.com" target="_blank"
+                ><i class="fa-brands fa-square-twitter"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://instagram.com" target="_blank"
+                ><i class="fa-brands fa-square-instagram"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
 
