--- a/contact.html
+++ b/contact.html
@@ -189,10 +189,71 @@
         </ul>
       </section>
     </main>
-
-    <footer>
+    <footer class="flex">
       <div class="backtotopbutton">
         <a href="#"><i class="fa-solid fa-circle-chevron-up"></i></a>
+      </div>
+
+      <div class="brand-logo flex">
+        <a href="index.html" class="flex"
+          ><img src="img/logo.png" alt="" />
+          <h2>restate</h2></a
+        >
+      </div>
+
+      <div class="nav-links">
+        <ul class="flex">
+          <li><a href="index.html">Home</a></li>
+          <li>|</li>
+          <li><a href="blog.html">Blog</a></li>
+          <li>|</li>
+          <li>About</li>
+          <li>|</li>
+          <li>Contact</li>
+        </ul>
+
+        <ul class="business-info flex col">
+          <li>Email: info@luxestates.com</li>
+          <li>Phone: +1-555-123-4567</li>
+          <li>123 Luxurious Ave, Opulent City, CA, 92574</li>
+        </ul>
+      </div>
+
+      <div class="subscribe flex col">
+        <label for="">Subscribe to our newsletter</label>
+        <div class="flex row">
+          <input type="text" placeholder="Enter your E-Mail" />
+          <button class="button">Submit</button>
+        </div>
+
+        <div class="social-media">
+          <h3>
+            © 2023 Luxe Estates. All rights reserved. Luxe Estates is a
+            registered trademark of Prestige Holdings LLC.
+          </h3>
+          <ul class="flex row">
+            <li>
+              <a href="https://facebook.com" target="_blank"
+                ><i class="fa-brands fa-square-facebook"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://instagram.com" target="_blank"
+                ><i class="fa-brands fa-square-instagram"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://twitter.com" target="_blank"
+                ><i class="fa-brands fa-square-twitter"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://instagram.com" target="_blank"
+                ><i class="fa-brands fa-square-instagram"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
